<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/spacing_tiny_2"
    app:cardElevation="@dimen/spacing_scanty_4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:cardBackgroundColor="@color/mintGreen"
    tools:context=".ui.activities.SettingsBuysActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:layout_marginBottom="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/choose_settings_buy"/>

            <CheckBox
                android:id="@+id/buy_type_check"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_type"
                />

            <CheckBox
                android:id="@+id/item_buy_check"
                style="@style/textView"
                android:checked="true"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_item"
                />

            <CheckBox
                android:id="@+id/unit_buy_check"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_unit"
                />

            <CheckBox
                android:id="@+id/count_buy_check"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_quantity"
                />

            <CheckBox
                android:id="@+id/price_by_unit_check"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/price_buy_unit"
                />

            <CheckBox
                android:id="@+id/amount_buy_check"
                style="@style/textView"
                android:checked="true"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_amount"
                />

            <CheckBox
                android:id="@+id/importance_buy_check"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_little_8"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/buy_importance"
                />

            <Button
                android:id="@+id/enter_button"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_medium_32"
                android:text="@string/done"/>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.CardView>
