<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/spacing_tiny_2"
    app:cardElevation="@dimen/spacing_scanty_4"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/spacing_normal_16"
    android:layout_marginRight="@dimen/spacing_normal_16"
    android:layout_marginTop="@dimen/spacing_normal_16"
    android:layout_marginBottom="@dimen/spacing_normal_16"
    tools:context=".ui.activities.SettingsActivity">>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/mintGreen"
    android:orientation="vertical">


    <TextView
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/settings_app"/>

    <TextView
        android:id="@+id/input_buys_parameters"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/settings_input_buy"/>

    <TextView
        android:id="@+id/output_buy_list_parameters"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/settings_buy_list"/>

    <TextView
        android:id="@+id/get_contact_for_SMS"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/choose_contact_for_SMS"/>


    <TextView
        android:id="@+id/back"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_app"
        />

</LinearLayout>
</android.support.v7.widget.CardView>