<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/spacing_tiny_2"
    app:cardElevation="@dimen/spacing_scanty_4"
    tools:context=".ui.activities.SettingsBuyListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/mintGreen"
        android:paddingRight="@dimen/spacing_medium_32"
        android:gravity="center_vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textView"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:layout_marginRight="@dimen/spacing_medium_32"
        android:text="@string/settings_buy_list"/>

    <RadioGroup
        android:id="@+id/parameters_buy_list_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/spacing_medium_32"
        >
        >

    <RadioButton
        android:id="@+id/plan_buys_btn"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/show_plan_buys"/>

    <RadioButton
        android:id="@+id/all_buys_btn"
        style="@style/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium_32"
        android:text="@string/show_all_buys"/>

    </RadioGroup>

        <TextView
            android:id="@+id/back_to_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textView"
            android:layout_marginRight="@dimen/spacing_medium_32"
            android:text="@string/back_to_settings"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
