<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/spacing_largest_160"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/spacing_tiny_2"
    app:cardElevation="@dimen/spacing_scanty_4"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/mintGreen"
    tools:context=".ui.fragments.ShowCostsDetailsFragment">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.33"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:orientation="horizontal">


        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:text="@string/plan_of_costs" />

        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:id="@+id/plan_costs"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:text="@string/fact_of_costs" />

        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:id="@+id/fact_costs"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:text="@string/plan_buys" />

        <ru.bolshakova.shoppinglist.utils.CustomTextView
            android:id="@+id/plan_buy_costs"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>

</android.support.v7.widget.CardView>
