<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/spacing_tiny_2"
    app:cardElevation="@dimen/spacing_scanty_4"
    android:layout_gravity="center"
    tools:context=".ui.fragments.BuyCardFragment">

  <LinearLayout
    android:id="@+id/container_for_buy_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_buy_enter"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/spacing_small_12"
        android:enabled="false"
    />

      <LinearLayout
          android:id="@+id/container_for_buy_unit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <EditText
              android:id="@+id/quantity_buy_enter"
              style="@style/textView"
              android:layout_width="0dp"
              android:layout_weight="0.4"
              android:layout_height="wrap_content"
              android:paddingRight="@dimen/spacing_small_12"
              />

          <TextView
              android:id="@+id/unit_buy_enter"
              style="@style/textView"
              android:layout_width="0dp"
              android:layout_weight="0.6"
              android:layout_height="wrap_content"
              android:enabled="false"/>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/container_for_unit_buy_price"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

    <EditText
        android:id="@+id/price_by_unit_enter"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/spacing_small_12"
        />

          <TextView
              android:id="@+id/text_for_unit_buy_price"
              style="@style/textView"
              android:layout_width="0dp"
              android:layout_weight="0.6"
              android:layout_height="wrap_content"
              android:enabled="false"
              android:text="@string/price_by_unit"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

     <EditText
        android:id="@+id/amount_buy_enter"
        style="@style/textView"
        android:layout_width="0dp"
        android:layout_weight="0.4"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/spacing_small_12"
        android:inputType="number"/>

          <TextView
              style="@style/textView"
              android:layout_width="0dp"
              android:layout_weight="0.6"
              android:layout_height="wrap_content"
              android:enabled="false"
              android:text="@string/rubles"/>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/container_for_buy_importance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
              android:id="@+id/importance"
              style="@style/textView"
              android:layout_width="0dp"
              android:layout_weight="0.4"
              android:layout_height="wrap_content"
              android:paddingRight="@dimen/spacing_small_12"
              android:enabled="false"
              android:text="@string/middle_importance">

          </TextView>

    <Spinner
        android:id="@+id/importance_buy_enter"
        style="@style/spinnerItemStyle"
        android:layout_width="0dp"
        android:layout_weight="0.6"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/change_buy_importance"
        />

      </LinearLayout>

       <CheckBox
           android:id="@+id/status_buy_enter"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/buy_status_check"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/delete_buy"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="32dp"
               android:src="@drawable/ic_close_black_24dp"/>

           <ImageView
               android:id="@+id/change_buy"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="32dp"
               android:src="@drawable/ic_mode_edit_black_24dp"/>

           <ImageView
               android:id="@+id/move_buy_to_next_period"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="32dp"
               android:src="@drawable/ic_arrow_forward_black_24dp1"/>
       </LinearLayout>


       </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>